# whapi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  additional_specs.md  docker-compose.prod.yml  docker-compose.yml  future_features.md
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml  tmp_debug_whatsapp.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_pedidos_fase5.py  0003_agregar_notas_cocina_entrega.py  0dea99306ec4_agregar_is_open_y_open_category_a_combo_.py  676b100f5333_agregar_wpp_token_a_whatsapp_numbers.py  8147ef4be830_schema_inicial_del_proyecto.py  9bb925a24f9d_completar_schema_fase1_gaps.py  a0a5b0bdb649_agregar_has_whatsapp_a_customer.py  b504cb07262e_agregar_label_a_whatsapp_numbers.py  c1d2e3f4a5b6_agregar_configuracion_de_asistente_a_.py  e7a1b2c3d4f5_agregar_agent_state_a_conversation_.py  f3b2c1d4e5f6_guardar_payload_y_metadata_whatsapp.py
backend/app/: main.py
backend/app/api/: agent.py  auth.py  catalogo.py  clientes.py  comercios.py  conversaciones.py  empleados.py  health.py  n8n.py  pagos.py  pedidos.py  pizzerias.py  reportes.py  webhooks.py  whatsapp.py
backend/app/core/: auth.py  config.py  db.py  deps.py  permisos.py  security.py
backend/app/models/: __init__.py  account.py  base.py  (+5 more)
backend/tests/: test_agent_api.py  test_agent_orchestrator.py  test_auth.py  test_catalogo.py  test_clientes.py  test_comercios.py  test_conversaciones.py  test_health.py  test_n8n.py  test_pagos.py  test_pedidos.py  test_pedidos_telefonicos.py  test_webhooks.py  test_whatsapp.py
(+124 files in other folders)
